--- a/Git projects/Melissa-Rose-login-ui-with-flexbox/style.css
+++ b/Git projects/Melissa-Rose-login-ui-with-flexbox/style.css
@@ -1,5 +1,5 @@
 html{
-  height: 100%
+  height: 100vh;
 }
 
 
@@ -7,10 +7,11 @@ body{
    
     height: 100%;
     width: 100%;
-    min-height: 50%;
-    min-width: 50%;
+    min-height: 100%;
+    min-width: 100%;
+    overflow-x: hidden;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;  
     background-image: url("https://images.pexels.com/photos/2163508/pexels-photo-2163508.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
     background-attachment: fixed;
@@ -23,12 +24,12 @@ body{
 
 .flex-container{
         display: flex;
-        min-width: 350px;
-        min-height: 250px;
+        min-width: 300px;
+        min-height: 220px;
         width: 24%;
         height: 18%;
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
         border: solid .2rem;
         border-radius:  10%;
@@ -49,25 +50,25 @@ h3 {
    
     border: none;
     outline: none;
+    width: 80%;
     font-size: .8rem;
     font-weight: bold;
     line-height: 1.5rem;
     border-bottom: 1px solid rgb(195, 201, 206);
-    margin-bottom: 1.2rem;
-    margin-top: .1rem;   
-
+    margin-bottom: 1rem;
 }
     
 #password{
    
     border: none;
     outline: none;
+    width: 80%;
     font-size: .8rem;
     font-weight: bold;
     color: black;
     line-height: 1.5rem;
     border-bottom: 1px solid rgb(195, 201, 206);
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
     
 
 }    
@@ -85,6 +86,7 @@ h3 {
     background-color: black;
     border-radius: 5rem;
     border: none;
+    margin-bottom: 1rem;
     
     
     
